[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scene.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-openxr/scenes/first_person_controller_vr.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/godot-xr-tools/assets/RightHand.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot-xr-tools/objects/Virtual_Keyboard.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/godot-xr-tools/assets/LeftHand.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_pointer.tscn" type="PackedScene" id=6]

[sub_resource type="PlaneMesh" id=2]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="FPController" parent="." instance=ExtResource( 2 )]

[node name="ARVRCamera" parent="FPController" index="1"]
far = 1000.0

[node name="LeftHandController" parent="FPController" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="LeftHand" parent="FPController/LeftHandController" index="0" instance=ExtResource( 5 )]

[node name="RightHandController" parent="FPController" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="RightHand" parent="FPController/RightHandController" index="0" instance=ExtResource( 3 )]

[node name="Function_pointer" parent="FPController/RightHandController" index="1" instance=ExtResource( 6 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 18.011, 0, 0, 0, 1, 0, 0, 0, 18.519, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.85718, 3.08892 )

[node name="Virtual_Keyboard" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="button_pressed" from="FPController/LeftHandController" to="." method="_on_LeftHandController_button_pressed"]

[editable path="FPController"]
